{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 16,
  "lineage": "f69cfd32-c31c-f0b5-cff1-55255704cf31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aabf22f4a9bf0226",
            "arn": "arn:aws:ec2:ap-south-1:891376974588:elastic-ip/eipalloc-0aabf22f4a9bf0226",
            "association_id": "eipassoc-0fe4fd37750c2595c",
            "domain": "vpc",
            "id": "eipalloc-0aabf22f4a9bf0226",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-04ad9099ae060ac3e",
            "private_dns": "ip-10-0-1-74.ap-south-1.compute.internal",
            "private_ip": "10.0.1.74",
            "public_dns": "ec2-13-200-232-190.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.232.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-vpc-nat"
            },
            "tags_all": {
              "Name": "demo-vpc-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376974588:internet-gateway/igw-08dc5fa95ff232fab",
            "id": "igw-08dc5fa95ff232fab",
            "owner_id": "891376974588",
            "tags": {
              "Name": "demo-vpc-igw"
            },
            "tags_all": {
              "Name": "demo-vpc-igw"
            },
            "vpc_id": "vpc-06cd9486a82322f69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aabf22f4a9bf0226",
            "association_id": "eipassoc-0fe4fd37750c2595c",
            "connectivity_type": "public",
            "id": "nat-01ac8f708dbac0d13",
            "network_interface_id": "eni-04ad9099ae060ac3e",
            "private_ip": "10.0.1.74",
            "public_ip": "13.200.232.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e00a2d87deca11f",
            "tags": {
              "Name": "demo-vpc-nat"
            },
            "tags_all": {
              "Name": "demo-vpc-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376974588:route-table/rtb-0c432c1cd8fdccc77",
            "id": "rtb-0c432c1cd8fdccc77",
            "owner_id": "891376974588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ac8f708dbac0d13",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc-Private_Route_Table"
            },
            "tags_all": {
              "Name": "demo-vpc-Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cd9486a82322f69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376974588:route-table/rtb-03273eaaa2f4e1c7f",
            "id": "rtb-03273eaaa2f4e1c7f",
            "owner_id": "891376974588",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08dc5fa95ff232fab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc-Public_Route_Table"
            },
            "tags_all": {
              "Name": "demo-vpc-Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cd9486a82322f69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030f84bbfdbdd9ba8",
            "route_table_id": "rtb-0c432c1cd8fdccc77",
            "subnet_id": "subnet-0277c320552673527"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00678d81a17f4e0ba",
            "route_table_id": "rtb-0c432c1cd8fdccc77",
            "subnet_id": "subnet-004dbd8548ee30b03"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac494e1beb736afd",
            "route_table_id": "rtb-03273eaaa2f4e1c7f",
            "subnet_id": "subnet-06e00a2d87deca11f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc368266a447ff4d",
            "route_table_id": "rtb-03273eaaa2f4e1c7f",
            "subnet_id": "subnet-0e98dac6c5d8a3c0d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376974588:subnet/subnet-0277c320552673527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0277c320552673527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376974588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "demo-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-06cd9486a82322f69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376974588:subnet/subnet-004dbd8548ee30b03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004dbd8548ee30b03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376974588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "demo-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-06cd9486a82322f69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376974588:subnet/subnet-06e00a2d87deca11f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e00a2d87deca11f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376974588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "demo-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-06cd9486a82322f69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376974588:subnet/subnet-0e98dac6c5d8a3c0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e98dac6c5d8a3c0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376974588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "demo-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-06cd9486a82322f69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376974588:vpc/vpc-06cd9486a82322f69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0943b684ffe824cf7",
            "default_route_table_id": "rtb-0f2e3984a7edabc0d",
            "default_security_group_id": "sg-0cb530b07675e04d0",
            "dhcp_options_id": "dopt-075e363f84620bae7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cd9486a82322f69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2e3984a7edabc0d",
            "owner_id": "891376974588",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}